Bug 1405896 - Properly destroy OverflowContainersProperty() in NormalizeChildLists(). r=mats

mozilla::Unused is going to be removed in bug 1628542. We can cast the
return value of `TakeProperty` into void to suppress the warning.

In bug 1641085, we can add `DestroyOverflowContainersList` (similar to
DestroyOverflowList(), and audit the caller.

Differential Revision: https://phabricator.services.mozilla.com/D76981